--- a/writing/manuscript.Rmd
+++ b/writing/manuscript.Rmd
@@ -36,7 +36,6 @@ header-includes:
     - \captionsetup[figure]{font=scriptsize, aboveskip=4pt, belowskip=-15pt}
     - \usepackage{hanging} # for hanging indents in references
 subparagraph: true # needed for \usepackage[small]{titlesec}
-linenumbers: true
 output:
   bookdown::pdf_document2:
     latex_engine: xelatex # @reed_frequency_2003 has unicode character U+0308
@@ -193,9 +192,9 @@ Like the scenario illustrated in figure \@ref(fig:multipanel-constant-var), we c
 
 ## Simulating responses to $\e(R)$ and $\var(R)$
 
-To support our hypothesis of how organisms' space-use requirements are affected by $\e(R)$, $\var(R)$, and the interaction effect of $\e(R)$ and $\var(R)$, we present the results from a series of quantitative simulations. To start, we used the `ctmm` package [@fleming_ctmm_2021] for `R` [@r_core_team_r_2022] to generate $2^{10}=1024$ tracks from an Integrated Ornstein-Uhlenbeck movement model [IOU model; @gurarie_correlated_2017]. The IOU model's correlated velocity produces realistic tracks with directional persistence despite the tracks being discrete samples of continuous-time movement processes. However, unlike Ornstein-Uhlenbeck (OU) and Ornstein-Uhlenbeck Foraging (OUF) models, IOU models do not assume the movement process is spatially stationary, so the organism is not assumed to be range-resident. Consequently, each track is spatially unrestricted and can be interpreted as purely exploratory movement.
+To support our hypothesis of how organisms' space-use requirements are affected by $\e(R)$, $\var(R)$, and the interaction effect of $\e(R)$ and $\var(R)$, we present the results from a series of quantitative simulations. To start, we used the `ctmm` package [@fleming_ctmm_2021] for `R` [@r_core_team_r_2022] to generate 200 tracks (see Appendices 2 for sensitivity analyses) from an Integrated Ornstein-Uhlenbeck movement model [IOU model; @gurarie_correlated_2017]. The IOU model's correlated velocity produces realistic tracks with directional persistence despite the tracks being discrete samples of continuous-time movement processes. However, unlike Ornstein-Uhlenbeck (OU) and Ornstein-Uhlenbeck Foraging (OUF) models, IOU models do not assume the movement process is spatially stationary, so the organism is not assumed to be range-resident. Consequently, each track is spatially unrestricted and can be interpreted as purely exploratory movement.
 
-Each of the 1024 tracks were placed on a raster with common starting point $\langle 0, 0\rangle$ and sufficient time between tracks to be independent of one another (other than the starting point). Each time the track moved to a new cell, the organism collected resources $R$ sampled from a Gamma distribution. The mean and variance of the distribution were defined by deterministic functions $\mu(t)$ and $\sigma^2(t)$ (orange and blue lines in figure \@ref(fig:5-5-sims)). Note that $t$ was constant within each set of 1024 tracks, so the time spent moving by the organism in each track did not affect the distribution $R$ was sampled from. Tracks were truncated once the organism reached satiety, and the organism was given enough time to return to $\langle 0, 0\rangle$ with no correlation to the following track. Finally, each set of 1024 truncated tracks was modeled using an OUF model and Autocorrelated Kernel Density Estimate to estimate the 95% utilization distribution. Additional information is provided in Appendix 2.
+Each of the 200 tracks were placed on a raster with common starting point $\langle 0, 0\rangle$ and sufficient time between tracks to be independent of one another (other than the starting point). Each time the track moved to a new cell, the organism collected resources $R$ sampled from a Gamma distribution. The mean and variance of the distribution were defined by deterministic functions $\mu(t)$ and $\sigma^2(t)$ (orange and blue lines in figure \@ref(fig:5-5-sims)). Note that $t$ was constant within each set of 200 tracks, so the time spent moving by the organism in each track did not affect the distribution $R$ was sampled from. Tracks were truncated once the organism reached satiety, and the organism was given enough time to return to $\langle 0, 0\rangle$ with no correlation to the following track. Finally, each set of 200 truncated tracks was modeled using an OUF model and Autocorrelated Kernel Density Estimate to estimate the 95% utilization distribution. Additional information is provided in Appendix 2.
 
 Figure \@ref(fig:5-5-sims) shows how the simulated space-use requirements changed in response to $\mu(t)$ and $\sigma^2(t)$. The top row (constant $\var(R)$) shows how space-use requirements vary for different trends in $\mu(t)$ while $\var(R)$ remains constant (like in figure \@ref(fig:multipanel-constant-var)). As $\e(R)$ increases at a constant slope (linear $\mu(t)$) the space-use requirements decrease nonlinearly, with larger changes when $\e(R)$ is low, until home-range size approaches the minimum size required by the organism. As described in the section on the effects of resource abundance, the nonlinear decrease is because changes in $\mu(t)$ have a larger effect when $\e(R)$ is low [e.g., @lucherini_habitat_1996; @nilsen_can_2005; @herfindal_prey_2005].
 
