--- a/writing/appendix-3-empirical-modeling.Rmd
+++ b/writing/appendix-3-empirical-modeling.Rmd
@@ -275,7 +275,7 @@ m_ndvi <-
       s(dec_date, bs = 'tp', k = 10)),  # scale over time
     family = betals(),
     data = anna_ndvi,
-    method = 'REML') # performs better than GCV (the default)
+    method = 'REML') # REstricted Maximum Likelihood 
 ```
 
 Note that when fitting location-scale GAMs, one should pay particular attention to the number of knots used for each smooth term. While using a penalized maximum likelihood method such as REML (`method = 'REML'`) helps avoid over-fitting the model, finding the right balance between each of the `k` values is crucial. Excessively smooth terms for the mean can inflate the scale term (fig. \@ref(fig:undersmooth)), while excessively wiggly terms for the mean can cause the scale to be under-estimated (fig. \@ref(fig:oversmooth)). Ultimately, each of the `k` values should be decided in such a way as to mimic the animal's responsiveness, adaptability, motility, and memory (or ability to predict cycles or events). If one is unsure where to start from, keeping the `k` for the scale terms below half the `k` for the mean terms is a good starting point.
